--- a/main.html
+++ b/main.html
@@ -13,13 +13,20 @@
             <div class="board" id="board"></div>
         </div>
         <div class="item">                  
-            <p style="padding-top: 10px;">Next Block</p>
+            <p style="padding: 1.5dvh">Next Block</p>
+            <div class="small_board">
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+            </div>
         </div>
         <div class="item">
-            <p>Score</p>
+            <p style="padding: 1.5dvh">Score</p>
         </div>
         <div class="item">
-            <p>Save Block</p>
+            <p style="padding: 1.5dvh">Save Block</p>
         </div>
     </div>
 </body>
