[js] 떨어지는 블록 구현 중

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <script src="./js/app.js" type="module"></script>
 </head>
 <body>
+    <h1>TETRIS</h1>
     <div class="container">        
         <div class="item">
             <div class="board" id="board"></div>
@@ -20,13 +21,80 @@
                 <div class="small_block"></div>
                 <div class="small_block"></div>
                 <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
             </div>
         </div>
         <div class="item">
             <p style="padding: 1.5dvh">Score</p>
         </div>
         <div class="item">
-            <p style="padding: 1.5dvh">Save Block</p>
+            <p style="padding: 1.5dvh">Saved Block</p>
+            <div class="small_board">
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+                <div class="small_block"></div>
+            </div>
         </div>
     </div>
 </body>
