[js] 충돌 함수 구현 完, 그림자 블록 그리는 中

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
             <div class="board" id="board"></div>
         </div>
         <div class="item">                  
-            <p style="padding: 1.5dvh">Next Block</p>
+            <p style="padding: 1.5dvh">Next</p>
             <div class="small_board">
                 <div class="small_block"></div>
                 <div class="small_block"></div>
@@ -57,7 +57,7 @@
             <p style="padding: 1.5dvh">Score</p>
         </div>
         <div class="item">
-            <p style="padding: 1.5dvh">Saved Block</p>
+            <p style="padding: 1.5dvh">Hold</p>
             <div class="small_board">
                 <div class="small_block"></div>
                 <div class="small_block"></div>
