[css] 블록 입체감 주기

--- a/main.html
+++ b/main.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1>TETRIS</h1>
-    <div class="container">        
+    <div class="container">
+        <div class="item">
+            <p style="padding: 1.5dvh">img</p>
+        </div>       
         <div class="item">
             <div class="board" id="board"></div>
         </div>
@@ -45,13 +48,10 @@
                 <div class="small_block"></div>
                 <div class="small_block"></div>
                 <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
             </div>
+        </div>
+        <div class="item">
+            <p style="padding: 1.5dvh">Level</p>
         </div>
         <div class="item">
             <p style="padding: 1.5dvh">Score</p>
@@ -59,12 +59,6 @@
         <div class="item">
             <p style="padding: 1.5dvh">Hold</p>
             <div class="small_board">
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
                 <div class="small_block"></div>
                 <div class="small_block"></div>
                 <div class="small_block"></div>
