[js] next 그리기 完, 내려온 블록 앉히고 다음 블록 나오기 完, hold 기능 구현 中

--- a/main.html
+++ b/main.html
@@ -16,39 +16,9 @@
         <div class="item">
             <div class="board" id="board"></div>
         </div>
-        <div class="item">                  
-            <p style="padding: 1.5dvh">Next</p>
-            <div class="small_board">
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-            </div>
+        <div class="item">               
+            <p style="padding: 2dvh">Next</p>
+            <div class="small_board" id="next"></div>
         </div>
         <div class="item">
             <p style="padding: 1.5dvh">Level</p>
@@ -57,38 +27,8 @@
             <p style="padding: 1.5dvh">Score</p>
         </div>
         <div class="item">
-            <p style="padding: 1.5dvh">Hold</p>
-            <div class="small_board">
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-                <div class="small_block"></div>
-            </div>
+            <p style="padding: 2dvh">Hold</p>
+            <div class="small_board" id="hold"></div>
         </div>
     </div>
 </body>
