[js] 홀드 完, 월킥 구현 中

--- a/main.html
+++ b/main.html
@@ -27,6 +27,9 @@
             <p style="padding: 1.5dvh">Score</p>
         </div>
         <div class="item">
+            <p style="padding: 1.5dvh">Lines</p>
+        </div>
+        <div class="item">
             <p style="padding: 2dvh">Hold</p>
             <div class="small_board" id="hold"></div>
         </div>
