--- a/main.html
+++ b/main.html
@@ -11,14 +11,8 @@
     <h1>TETRIS</h1>
     <div class="container">
         <div class="item">
-            <p style="padding: 1.5dvh">img</p>
-        </div>       
-        <div class="item">
-            <div class="board" id="board"></div>
-        </div>
-        <div class="item">               
-            <p style="padding: 2dvh">Next</p>
-            <div class="small_board" id="next"></div>
+            <p style="padding: 2dvh">Hold</p>
+            <div class="small_board" id="hold"></div>
         </div>
         <div class="item">
             <p style="padding: 1.5dvh">Level</p>
@@ -29,10 +23,18 @@
         <div class="item">
             <p style="padding: 1.5dvh">Lines</p>
         </div>
+        <div class="item">img</div>
         <div class="item">
-            <p style="padding: 2dvh">Hold</p>
-            <div class="small_board" id="hold"></div>
+            <div class="board" id="board"></div>
         </div>
+        <div class="item">               
+            <p style="padding: 2dvh">Next</p>
+            <div class="small_board" id="next_0"></div>
+            <div class="small_board" id="next_1"></div>
+            <div class="small_board" id="next_2"></div>
+            <div class="small_board" id="next_3"></div>
+            <div class="small_board" id="next_4"></div>
+        </div>       
     </div>
 </body>
 </html>
