[js] 7-bag 中, 월킥 中

--- a/main.html
+++ b/main.html
@@ -10,30 +10,25 @@
 <body>
     <h1>TETRIS</h1>
     <div class="container">
-        <div class="item">
+        <div class="item" id="holdSection">
             <p style="padding: 2dvh">Hold</p>
             <div class="small_board" id="hold"></div>
         </div>
-        <div class="item">
+        <div class="item" id="levelSection">
             <p style="padding: 1.5dvh">Level</p>
         </div>
-        <div class="item">
+        <div class="item" id="scoreSection">
             <p style="padding: 1.5dvh">Score</p>
         </div>
-        <div class="item">
+        <div class="item" id="linesSection">
             <p style="padding: 1.5dvh">Lines</p>
         </div>
         <div class="item">img</div>
-        <div class="item">
+        <div class="item" id="boardSection">
             <div class="board" id="board"></div>
         </div>
-        <div class="item">               
+        <div class="item" id="nextSection">               
             <p style="padding: 2dvh">Next</p>
-            <div class="small_board" id="next_0"></div>
-            <div class="small_board" id="next_1"></div>
-            <div class="small_board" id="next_2"></div>
-            <div class="small_board" id="next_3"></div>
-            <div class="small_board" id="next_4"></div>
         </div>       
     </div>
 </body>
