[css] hold, next 블록 간격 조정

--- a/main.html
+++ b/main.html
@@ -11,7 +11,9 @@
     <h1>TETRIS</h1>
     <div class="container">
         <div class="item" id="holdSection">
-            <p style="padding: 2dvh">Hold</p>
+            <p style="padding-top: 2dvh; padding-bottom: 1dvh;">Hold</p>
+            <div class="blackBox" id="holdBox"></div>
+            <div id="holdBuffer"></div>
             <div class="small_board" id="hold"></div>
         </div>
         <div class="item" id="levelSection">
@@ -28,7 +30,9 @@
             <div class="board" id="board"></div>
         </div>
         <div class="item" id="nextSection">               
-            <p style="padding: 2dvh">Next</p>
+            <p style="padding-top: 2dvh; padding-bottom: 1dvh;">Next</p>
+            <div class="blackBox" id="nextBox"></div>
+            <div id="nextBuffer"></div>
         </div>       
     </div>
 </body>
