--- a/main.html
+++ b/main.html
@@ -35,5 +35,13 @@
             <div id="nextBuffer"></div>
         </div>       
     </div>
+    <div class="container" id="animationLayer" style="position: absolute;">
+        <div style="grid-column: 1/2; grid-row: 1/6;"></div>
+        <div style="grid-column: 2/3; grid-row: 1/6;">
+            <div class="board" id="animationBoard" style="background-color: rgba(255, 255, 255, 0);"></div>
+        </div>
+        <div style="grid-column: 3/4; grid-row: 1/6;"></div>
+    </div>
+
 </body>
 </html>
