[js] 굳히기 전 애니메이션

--- a/main.html
+++ b/main.html
@@ -29,16 +29,16 @@
         <div class="item" id="boardSection">
             <div class="board" id="board"></div>
         </div>
-        <div class="item" id="nextSection">               
+        <div class="item" id="nextSection">            
             <p style="padding-top: 2dvh; padding-bottom: 1dvh;">Next</p>
             <div class="blackBox" id="nextBox"></div>
             <div id="nextBuffer"></div>
-        </div>       
+        </div>   
     </div>
-    <div class="container" id="animationLayer" style="position: absolute;">
+    <div class="container" id="blockLayer" style="position: absolute;">
         <div style="grid-column: 1/2; grid-row: 1/6;"></div>
         <div style="grid-column: 2/3; grid-row: 1/6;">
-            <div class="board" id="animationBoard" style="background-color: rgba(255, 255, 255, 0);"></div>
+            <div class="board" id="blockBoard" style="background-color: rgba(255, 255, 255, 0);"></div>
         </div>
         <div style="grid-column: 3/4; grid-row: 1/6;"></div>
     </div>
