[js] 굳히기 애니메이션 디자인 수정 中

--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
             <div id="nextBuffer"></div>
         </div>   
     </div>
-    <div class="container" id="blockLayer" style="position: absolute;">
+    <div class="container" id="blockLayer">
         <div style="grid-column: 1/2; grid-row: 1/6;"></div>
         <div style="grid-column: 2/3; grid-row: 1/6;">
             <div class="board" id="blockBoard" style="background-color: rgba(255, 255, 255, 0);"></div>
