[js] 줄 지우기 애니메이션 完

--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
         </div>
         <div class="item">img</div>
         <div class="item" id="boardSection">
-            <div class="board" id="board"></div>
+            <div class="board" id="backBoard"></div>
         </div>
         <div class="item" id="nextSection">            
             <p style="padding-top: 2dvh; padding-bottom: 1dvh;">Next</p>
@@ -35,12 +35,11 @@
             <div id="nextBuffer"></div>
         </div>   
     </div>
-    <div class="container" id="blockLayer">
-        <div style="grid-column: 1/2; grid-row: 1/6;"></div>
-        <div style="grid-column: 2/3; grid-row: 1/6;">
-            <div class="board" id="blockBoard" style="background-color: rgba(255, 255, 255, 0);"></div>
-        </div>
-        <div style="grid-column: 3/4; grid-row: 1/6;"></div>
+    <div class="layer">
+        <div class="board" id="animationBoard"></div>
+    </div>
+    <div class="layer">
+        <div class="board" id="blockBoard"></div>
     </div>
 
 </body>
