[js] hard drop 애니메이션 中

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- <script src="./js/app.js" type="module"></script> -->
 </head>
 <body>
-    <a href="./main.html">시작하기</a>
+    <div>
+        <a href="./main.html">✓ 게임하기</a>
+        <a href="#">✓ 하는 법</a>
+        <a href="#">□ 점주 보기</a>
+        <a href="#">✓ 설정</a>
+    </div>
+    <div class="modal"></div> <!--하는 법-->
 </body>
 </html>
