[js] 일시 정지 기능 중간 완성, 게임 오버 기능 中

--- a/main.html
+++ b/main.html
@@ -41,6 +41,8 @@
     <div class="layer">
         <div class="board" id="blockBoard"></div>
     </div>
-
+    <div id="textLayer">
+        <div id="textBoard"></div>
+    </div>
 </body>
 </html>
