--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
             <div class="small_board" id="hold"></div>
         </div>
         <div class="item" id="levelSection">
-            <p style="padding: 1.5dvh">Level</p>
+            <p>Level</p>
         </div>
         <div class="item" id="scoreSection">
-            <p style="padding: 1.5dvh">Score</p>
+            <p>Score</p>
         </div>
         <div class="item" id="linesSection">
-            <p style="padding: 1.5dvh">Lines</p>
+            <p>Lines</p>
         </div>
         <div class="item">img</div>
         <div class="item" id="boardSection">
