--- a/main.html
+++ b/main.html
@@ -11,26 +11,29 @@
     <h1>TETRIS</h1>
     <div class="container">
         <div class="item" id="holdSection">
-            <p style="padding-top: 2dvh; padding-bottom: 1dvh;">Hold</p>
+            <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">HOLD</p>
             <div class="blackBox" id="holdBox"></div>
             <div id="holdBuffer"></div>
             <div class="small_board" id="hold"></div>
         </div>
         <div class="item" id="levelSection">
-            <p>Level</p>
+            <p class="title">LEVEL</p>
+            <p class="content">2</p>
         </div>
         <div class="item" id="scoreSection">
-            <p>Score</p>
+            <p class="title">SCORE</p>
+            <p class="content"></p>
         </div>
         <div class="item" id="linesSection">
-            <p>Lines</p>
+            <p class="title">LINES</p>
+            <p class="content"></p>
         </div>
         <div class="item">img</div>
         <div class="item" id="boardSection">
             <div class="board" id="backBoard"></div>
         </div>
         <div class="item" id="nextSection">            
-            <p style="padding-top: 2dvh; padding-bottom: 1dvh;">Next</p>
+            <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">NEXT</p>
             <div class="blackBox" id="nextBox"></div>
             <div id="nextBuffer"></div>
         </div>   
