[js] 점수 시스템 개발 中

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div>
-        <a href="./main.html">✓ 게임하기</a>
+        <a href="./main.html">✓ 한판 하기</a>
         <a href="#">✓ 하는 법</a>
-        <a href="#">□ 점주 보기</a>
+        <a href="#">□ 기록 보기</a>
         <a href="#">✓ 설정</a>
     </div>
     <div class="modal"></div> <!--하는 법-->
