[js] drop 점수 구현

--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
     <script src="./js/app.js" type="module"></script>
 </head>
 <body>
-    <h1>TETRIS</h1>
+    <h1>
+        <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
+    </h1>
     <div class="container">
         <div class="item" id="holdSection">
             <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">HOLD</p>
@@ -18,7 +20,7 @@
         </div>
         <div class="item" id="levelSection">
             <p class="title">LEVEL</p>
-            <p class="content">2</p>
+            <p class="content"></p>
         </div>
         <div class="item" id="scoreSection">
             <p class="title">SCORE</p>
