[js] 점수 획득 애니메이션 中

--- a/main.html
+++ b/main.html
@@ -46,8 +46,20 @@
     <div class="layer">
         <div class="board" id="blockBoard"></div>
     </div>
-    <div id="textLayer">
-        <div id="textBoard"></div>
+    <div class="layer" id="textLayer">
+        <!-- <p class="combo">1 COMBO</p>
+        <p class="point">+1000</p>
+        <p class="backtoback">BACK‐TO‐BACK</p>
+        <p class="tspin">T‐SPIN</p>
+        <p class="point">+1200</p> -->
+        <!-- <p class="perfect">PERFECT CLEAR</p>
+        <p class="bonus">+800</p> -->
+    </div>
+    <div class="modal" id="pauseModal">
+        <div>PAUSE</div>
+    </div>
+    <div class="modal" id="gameoverModal">
+        <div>GAME OVER</div>
     </div>
 </body>
 </html>
