--- a/main.html
+++ b/main.html
@@ -8,51 +8,57 @@
     <script src="./js/app.js" type="module"></script>
 </head>
 <body>
-    <h1>
-        <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
-    </h1>
-    <div class="container">
-        <div class="item" id="holdSection">
-            <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">HOLD</p>
-            <div class="blackBox" id="holdBox"></div>
-            <div id="holdBuffer"></div>
-            <div class="small_board" id="hold"></div>
+    <div>
+        <h1>
+            <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
+        </h1>
+        <div class="container" id="background">
+            <div class="item" id="leftBackground">
+            </div>
+            <div class="item" id="centerBackground">
+                <div class="board" id="backBoard"></div>
+            </div>
+            <div class="item" id="rightBackground"></div>
         </div>
-        <div class="item" id="levelSection">
-            <p class="title">LEVEL</p>
-            <p class="content"></p>
+        <div class="layer" id="animationLayer">
+            <div class="board" id="animationBoard"></div>
         </div>
-        <div class="item" id="scoreSection">
-            <p class="title">SCORE</p>
-            <p class="content"></p>
+        <div class="container" id="blackLayer">
+            <div class="item" id="holdSection">
+                <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">HOLD</p>
+                <div class="blackBox" id="holdBox"></div>
+                <div id="holdBuffer"></div>
+                <div class="small_board" id="hold"></div>
+            </div>        
+            <div class="item" id="levelSection">
+                <p class="title">LEVEL</p>
+                <p class="content"></p>
+            </div>
+            <div class="item" id="scoreSection">
+                <p class="title">SCORE</p>
+                <p class="content"></p>
+            </div>
+            <div class="item" id="linesSection">
+                <p class="title">LINES</p>
+                <p class="content"></p>
+            </div>
+            <div class="item">포기하면 편해!</div>
+            <div class="item" id="boardSection">
+                <div class="board" id="blockBoard"></div>
+            </div>
+            <div class="item" id="nextSection">            
+                <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">NEXT</p>
+                <div class="blackBox" id="nextBox"></div>
+                <div id="nextBuffer"></div>
+            </div> 
         </div>
-        <div class="item" id="linesSection">
-            <p class="title">LINES</p>
-            <p class="content"></p>
+        <div class="layer" id="textLayer"></div>
+        <div class="modal" id="pauseModal">
+            <div>PAUSE</div>
         </div>
-        <div class="item">img</div>
-        <div class="item" id="boardSection">
-            <div class="board" id="backBoard"></div>
+        <div class="modal" id="gameoverModal">
+            <div>GAME OVER</div>
         </div>
-        <div class="item" id="nextSection">            
-            <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">NEXT</p>
-            <div class="blackBox" id="nextBox"></div>
-            <div id="nextBuffer"></div>
-        </div>   
-    </div>
-    <div class="layer">
-        <div class="board" id="animationBoard"></div>
-    </div>
-    <div class="layer">
-        <div class="board" id="blockBoard"></div>
-    </div>
-    <div class="layer" id="textLayer">
-    </div>
-    <div class="modal" id="pauseModal">
-        <div>PAUSE</div>
-    </div>
-    <div class="modal" id="gameoverModal">
-        <div>GAME OVER</div>
     </div>
 </body>
 </html>
