[css] 레벨, 스코어 등 디자인 수정

--- a/main.html
+++ b/main.html
@@ -23,26 +23,32 @@
         <div class="layer" id="animationLayer">
             <div class="board" id="animationBoard"></div>
         </div>
-        <div class="container" id="blackLayer">
+        <div class="container" id="blockLayer">
             <div class="item" id="holdSection">
                 <p class="title" style="padding-top: 2dvh; padding-bottom: 1dvh;">HOLD</p>
                 <div class="blackBox" id="holdBox"></div>
                 <div id="holdBuffer"></div>
                 <div class="small_board" id="hold"></div>
-            </div>        
+            </div>
             <div class="item" id="levelSection">
                 <p class="title">LEVEL</p>
-                <p class="content"></p>
+                <div class="blackBox" id="levelBox">
+                    <p class="content"></p>
+                </div>
             </div>
             <div class="item" id="scoreSection">
                 <p class="title">SCORE</p>
-                <p class="content"></p>
+                <div class="blackBox" id="scoreBox">
+                    <p class="content"></p>
+                </div>
             </div>
             <div class="item" id="linesSection">
                 <p class="title">LINES</p>
-                <p class="content"></p>
+                <div class="blackBox" id="lineBox">
+                    <p class="content"></p>
+                </div>
             </div>
-            <div class="item">포기하면 편해!</div>
+            <div class="item"></div>
             <div class="item" id="boardSection">
                 <div class="board" id="blockBoard"></div>
             </div>
