--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <script src="./js/app.js" type="module"></script>
 </head>
 <body>
-    <div>
+    <div id="main">
         <h1>
             <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
         </h1>
