[css] pause modal 구현

--- a/main.html
+++ b/main.html
@@ -60,10 +60,27 @@
         </div>
         <div class="layer" id="textLayer"></div>
         <div class="modal" id="pauseModal">
-            <div>PAUSE</div>
+            <div class="modal_window">
+                <div>
+                    <div>
+                        <div class="modal_title">PAUSED</div>
+                        <a href="#" class="modal_button Z_block"><span>RESUME</span></a>
+                        <a href="#" class="modal_button L_block"><span>OPTIONS</span></a>
+                        <a href="#" class="modal_button S_block"><span>HOW TO PLAY</span></a>
+                        <a href="#" class="modal_button J_block"><span>HIGH SCORES</span></a>
+                        <a href="#" class="modal_button T_block"><span>QUIT</span></a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="modal" id="gameoverModal">
-            <div>GAME OVER</div>
+            <div class="modal_window">
+                <div>
+                    <div>
+                        <div class="modal_title">GAME OVER</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
