--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
     <script src="./js/app.js" type="module"></script>
 </head>
 <body>
+    <audio class="sfx" id="sfx_lock">
+        <source src="" type="audio/mpeg">
+    </audio>
+    <audio class="sfx" id="sfx_move">
+        <source src="" type="audio/mpeg">
+    </audio>
+    <audio class="sfx" id="sfx_rotation">
+        <source src="" type="audio/mpeg">
+    </audio>
+    <audio class="sfx" id="sfx_deletion">
+        <source src="" type="audio/mpeg">
+    </audio>
+    <audio id="bgm" loop="true">
+        <source src="" type="audio/mpeg">
+    </audio>
     <div id="ingame">
         <h1>
             <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
