--- a/main.html
+++ b/main.html
@@ -9,27 +9,11 @@
     <script src="./js/app.js" type="module"></script>
 </head>
 <body>
-    <audio class="sfx" id="sfx_lock">
-        <source src="./sound/sfx/sfx_locking.mp3" type="audio/mpeg">
-        <source src="./sound/sfx/sfx_locking.ogg" type="audio/ogg">
-    </audio>
-    <audio class="sfx" id="sfx_move">
-        <source src="./sound/sfx/sfx_move.mp3" type="audio/mpeg">
-        <source src="./sound/sfx/sfx_move.ogg" type="audio/ogg">
-    </audio>
-    <audio class="sfx" id="sfx_rotation">
-        <source src="./sound/sfx/sfx_rotation.mp3" type="audio/mpeg">
-        <source src="./sound/sfx/sfx_rotation.ogg" type="audio/ogg">
-    </audio>
-    <!-- <audio class="sfx" id="sfx_deletion">
-        <source src="./sound/sfx/sfx_deletion.mp3" type="audio/mpeg">
-        <source src="./sound/sfx/sfx_deletion.ogg" type="audio/ogg">
-    </audio> -->
-    <audio id="bgm" autoplay="false" loop="false">
-        <source src="./sound/bgm/Korobeiniki.mp3" type="audio/mpeg">
-        <!-- <source src="./sound/bgm/Korobeiniki.ogg" type="audio/ogg"> -->
-    </audio>
     <div id="ingame">
+        <audio id="bgm">
+            <source src="./sound/bgm/Korobeiniki.mp3" type="audio/mpeg">
+            <source src="./sound/bgm/Korobeiniki.ogg" type="audio/ogg">
+        </audio>
         <h1>
             <span>T</span><span>E</span><span>T</span><span>R</span><span>I</span><span>S</span>
         </h1>
